# Habit_Tracker

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml  tests_coverage.json
config/: settings.py  urls.py
habits/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_time.py
users/: admin.py  models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
